# StageClix

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/stageclix/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  BackingMixer.cpp  BackingMixer.h  CMakeLists.txt  FilePlayer.cpp  FilePlayer.h  JniBridge.cpp  VoiceCuePlayer.cpp  VoiceCuePlayer.h  native-lib.cpp
app/src/main/java/com/clickcue/audio/: AudioEngineJni.kt
app/src/main/java/com/example/stageclix/: MainActivity.kt
app/src/main/java/com/example/stageclix/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/stageclix/: MainActivity.kt
app/src/main/java/com/stageclix/audio/: AudioEngineJni.kt  PcmDecoder.kt  SampleLoader.kt  UsbAudioDeviceManager.kt  VoiceCueLoader.kt
app/src/main/java/com/stageclix/data/: AppDataStore.kt  Models.kt
app/src/main/java/com/stageclix/ui/: BeatBuilderSheet.kt  SetlistScreen.kt  SongListScreen.kt  TimelineScreen.kt
app/src/main/java/com/stageclix/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/stageclix/viewmodel/: PlayerViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  font_certs.xml  strings.xml  themes.xml
app/src/test/java/com/example/stageclix/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
